# gst-plugin-rs

video/gtk4/: Cargo.toml
video/gtk4/examples/: gtksink.rs
video/gtk4/src/: lib.rs
video/gtk4/src/sink/: frame.rs  imp.rs  mod.rs
video/gtk4/src/sink/paintable/: imp.rs  mod.rs
