[package]
name = "gst-plugin-gtk4"
version = "0.1.0"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>", "Jordan Petridis <jordan@centricular.com>", "Sebastian Dröge <sebastian@centricular.com>"]
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
license = "MPL-2.0"
edition = "2021"
rust-version = "1.56"
description = "GTK 4 Sink element and Paintable widget"

[dependencies]
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs" }
gdk_wayland = { package = "gdk4-wayland", git = "https://github.com/gtk-rs/gtk4-rs" }

gst = { package = "gstreamer", git = "https://github.com/angeleye/gstreamer-rs.git", branch = "5a7f5-angeleye-gir-files-rs", features = ["v1_16"] }
gst_base = { package = "gstreamer-base", git = "https://github.com/angeleye/gstreamer-rs.git", branch = "5a7f5-angeleye-gir-files-rs" }
gst_video = { package = "gstreamer-video", git = "https://github.com/angeleye/gstreamer-rs.git", branch = "5a7f5-angeleye-gir-files-rs" }
gst_gl = { package = "gstreamer-gl", git = "https://github.com/angeleye/gstreamer-rs.git", branch = "5a7f5-angeleye-gir-files-rs", features = ["v1_16"] }

# FIXME: these, and the x11 eq, should be optional somehow
gst_gl_wayland = { package = "gstreamer-gl-wayland", git = "https://github.com/angeleye/gstreamer-rs.git", branch = "5a7f5-angeleye-gir-files-rs", features = ["v1_16"] }

once_cell = "1.0"
fragile = "1.0.0"

[lib]
name = "gstgtk4"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="../../version-helper" }

[features]
# GStreamer 1.14 is required for static linking
static = ["gst/v1_14"]
capi = []

[package.metadata.capi]
min_version = "0.7.0"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0, gtk4, gobject-2.0, glib-2.0, gmodule-2.0"
